_sass/minima/_layout.scss
/**
 * Home
 */

.home {
  p {
    @include relative-font-size(1.1);
    text-align: center;
    animation: delayedfadein 3s;
  }
}

@keyframes delayedfadein {
  0% {
    opacity: 0;
  }
  70% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}


/**
 * Page
 */

.page-header {
  margin-bottom: $spacing-unit;
  text-align: center;
}

.page-title {
  @include relative-font-size(2.625);
  letter-spacing: -1px;
  line-height: 1;
  @include media-query($on-laptop) {
    @include relative-font-size(2.25);
  }
}

.page-meta {
  font-size: $small-font-size;
  color: $grey-color;
}

.page-content {
  margin: $spacing-unit;
  h2 {
    @include relative-font-size(1.8);
    color: $brand-color;
    font-weight: 600;
    letter-spacing: -0.5px;
    @include media-query($on-laptop) {
      @include relative-font-size(1.6);
    }
  }
  h3 {
    @include relative-font-size(1.35);
    font-weight: 500;
    @include media-query($on-laptop) {
      @include relative-font-size(1.375);
    }
  }
  h4 {
    @include relative-font-size(1.1);
    font-style: italic;
    @include media-query($on-laptop) {
      @include relative-font-size(1.0);
    }
  }
  h5 {
    @include relative-font-size(1.0);
    font-weight: 500;
    @include media-query($on-laptop) {
      @include relative-font-size(1.0);
    }
  }
  .float-left {
    float: left;
  }
  .float-right {
    float: right;
    @include media-query($on-palm) {
      float: left;
      width: 100%;
    }
  }
  .float-clear {
    clear: both;
  }
  .portfolio-card {
    margin: $spacing-unit 10%;
  }
  .portfolio-card-overlay {
    height: 200px;
  }
}

.page-footer {
  margin: $spacing-unit * 2 auto $spacing-unit / 2;
  text-align: center;
  .site-logo {
    margin: $spacing-unit / 2 auto;
  }
}


/**
 * Portfolios
 */

.portfolios {
  .portfolio-card {
    margin: 5px;
    visibility: hidden; // Start hidden to avoid ScrollReveal flickering.
  }
  .portfolio-card-overlay {
    height: 200px;
  }
}

.portfolio-col-wrapper {
  // @include relative-font-size(0.9375);
  text-align: center;
  @extend %clearfix;
}

.portfolio-col-3 {
  display: inline-block;
  vertical-align: top;
  width: -webkit-calc(25% - (#{$spacing-unit} / 2));
  width: calc(25% - (#{$spacing-unit} / 2));
}

.portfolio-col-4 {
  display: inline-block;
  vertical-align: top;
  width: -webkit-calc(33% - (#{$spacing-unit} / 2));
  width: calc(33% - (#{$spacing-unit} / 2));
}

.portfolio-col-6 {
  display: inline-block;
  vertical-align: top;
  width: -webkit-calc(50% - (#{$spacing-unit} / 2));
  width: calc(50% - (#{$spacing-unit} / 2));
}

@include media-query($on-laptop) {
  .portfolio-col-1,
  .portfolio-col-2,
  .portfolio-col-3 {
    width: -webkit-calc(50% - (#{$spacing-unit} / 2));
    width: calc(50% - (#{$spacing-unit} / 2));
  }
}

@include media-query($on-palm) {
  .portfolio-col {
    float: none;
    width: -webkit-calc(100% - (#{$spacing-unit} / 2));
    width: calc(100% - (#{$spacing-unit} / 2));
  }
}


/**
 * Portfolio
 */

.portfolio {
  .portfolio-card {
    visibility: hidden; // Start hidden to avoid ScrollReveal flickering.
  }
}


/**
 * Posts
 */

.post-list {
  margin-left: 0;
  list-style: none;
  >li {
    margin-bottom: $spacing-unit;
  }
}

.post-link {
  display: block;
  @include relative-font-size(1.5);
}

